# libendian

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  INSTALL
codelite/: libendian.project
include/libendian/: ConvertEndianess.h  EndianIStreamAdapter.h  EndianOStreamAdapter.h  EndianStreamAdapterBase.h  endianess.h  libendian.h
src/: CMakeLists.txt  ConvertEndianess.h  EndianIStreamAdapter.h  EndianOStreamAdapter.h  EndianStream.h  EndianStreamAdapterBase.h  FileError.h  endianess.h  libendian.cpp  libendian.h  libendianDefines.h  main.h  read.cpp  read_char.cpp  read_int.cpp  read_short.cpp  swap.cpp  write.cpp  write_char.cpp  write_int.cpp  write_short.cpp
win32/vs2008/: libendian.vcproj
win32/vs2010/: libendian.vcxproj  libendian.vcxproj.filters
win32/vs2012/libendian/: libendian.vcxproj
